--- a/Statistik_II_3_SS24.Rmd
+++ b/Statistik_II_3_SS24.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Einheit 3"
 subtitle: "⚔<br/>with xaringan"
-author: "Dr. Stephan Goerigk"
+author: "Prof. Dr. Stephan Goerigk"
 institute: "RStudio, PBC"
 date: "2016/12/12 (updated: `r Sys.Date()`)"
 output:
@@ -60,9 +60,9 @@ name: Title slide
 class: middle, left
 <br><br><br><br><br><br><br>
 # Statistik II
-
+***
 ### Einheit 3: Einfache lineare Regression (1)
-##### 25.10.2023 | Prof. Dr. phil. Stephan Goerigk
+##### `r format(as.Date(data.frame(readxl::read_excel("Modul Quantitative Methoden II_Termine.xlsx"))$Datum), "%d.%m.%Y")[3]` | Prof. Dr. Stephan Goerigk
 
 ---
 class: top, left
