--- a/Statistik_II_5_SS24.Rmd
+++ b/Statistik_II_5_SS24.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Einheit 5"
 subtitle: "⚔<br/>with xaringan"
-author: "Dr. Stephan Goerigk"
+author: "Prof. Dr. Stephan Goerigk"
 institute: "RStudio, PBC"
 date: "2016/12/12 (updated: `r Sys.Date()`)"
 output:
@@ -61,9 +61,9 @@ name: Title slide
 class: middle, left
 <br><br><br><br><br><br><br>
 # Statistik II
-
+***
 ### Einheit 5: Mehrfaktorielle ANOVA
-##### 21.11.2023 | Prof. Dr. phil. Stephan Goerigk
+##### `r format(as.Date(data.frame(readxl::read_excel("Modul Quantitative Methoden II_Termine.xlsx"))$Datum), "%d.%m.%Y")[5]` | Prof. Dr. Stephan Goerigk
 
 ```{r echo = F}
 Medikament = rep(c("Verum", "Placebo"), each = 8)
