--- a/Statistik_II_7_SS24.Rmd
+++ b/Statistik_II_7_SS24.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Einheit 7"
 subtitle: "⚔<br/>with xaringan"
-author: "Dr. Stephan Goerigk"
+author: "Prof. Dr. Stephan Goerigk"
 institute: "RStudio, PBC"
 date: "2016/12/12 (updated: `r Sys.Date()`)"
 output:
@@ -63,9 +63,9 @@ name: Title slide
 class: middle, left
 <br><br><br><br><br><br><br>
 # Statistik II
-
+***
 ### Einheit 7: Regressionsmodelle mit Interaktionen
-##### 06.12.2023 | Prof. Dr. phil. Stephan Goerigk
+##### `r format(as.Date(data.frame(readxl::read_excel("Modul Quantitative Methoden II_Termine.xlsx"))$Datum), "%d.%m.%Y")[7]` | Prof. Dr. Stephan Goerigk
 
 ---
 class: top, left
