--- a/Statistik_II_1_SS24.Rmd
+++ b/Statistik_II_1_SS24.Rmd
@@ -67,7 +67,7 @@ name: Contact Slide
 .pull-left[
 Prof. Dr. phil. Stephan Goerigk 
 
-Psychologische Methodenlehre
+Psychologische Methodenlehr
 
 Infanteriestraße 11a · 80797 München · 
 
